[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Scripts de Minigames/Corrida Pela Saúde/Agua.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Sprites/Minigames/Corrida Pela Saúde/Itens/Agua.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Poderes/Executivo/Minigames/Corrida pela Saúde/Efeitos/Pegou.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/Musicas/confirmation_001.ogg" type="AudioStream" id=4]

[node name="Agua" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.785398
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Pegou" parent="." instance=ExtResource( 3 )]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pegou"]
rotation = 0.785398
scale = Vector2( 0.15, 0.15 )
polygon = PoolVector2Array( 32, -241.4, 34.4, -235, 35.4, -235, 44, -231.3, 44, -198.6, 35, -195.6, 35, -185, 44, -181.3, 44, -175.5, 44.2, -175, 45.4, -175, 54, -171.3, 54, -165.5, 54.2, -165, 55.4, -165, 64, -161.3, 64, -155.5, 64.2, -155, 65.4, -155, 74, -151.3, 74, -136.2, 84, -131.2, 84, -105.5, 84.2, -105, 85.4, -105, 94, -101.3, 94, -93.9, 89.1, -90.7, 87, -91.8, 87, -93.2, 84.2, -96, 75.5, -96, 75, -95.7, 75, -94.9, 74.2, -86.8, 76.1, -84, 83.2, -84, 88.2, -89, 90.8, -89, 94, -85.8, 94, 1.20001, 84, 6.20001, 84, 53.8, 94, 58.8, 94, 81.4, 85, 84.4, 85, 85.1, 84.2, 93.4, 94, 98.8, 94, 122, 91.4, 122, 85, 124.4, 85, 125.1, 84.2, 133.4, 94, 138.8, 94, 162, 91.4, 162, 85, 164.4, 85, 165.4, 81.3, 174, 75.5, 174, 75, 174.3, 75, 175.4, 71.3, 184, 65.5, 184, 65, 184.3, 65, 185.4, 61.3, 194, -42, 194, -42, 191.4, -44.4, 185, -45.4, 185, -54, 181.3, -54, 175.5, -54.3, 175, -55.4, 175, -64, 171.3, -64, 165.5, -64.3, 165, -65.4, 165, -74, 161.3, -74, 138.8, -57, 129.7, -57, 133.1, -51, 138.1, -51, 142, -56, 146, -56, 154.5, -55.8, 155, -54.9, 155, -38, 156.1, -38, 158.5, -33.9, 166, -7, 166, -4, 163.9, -4, 145.5, -4.3, 145, -5, 145, -37, 144, -37, 141.8, -39.4, 139.5, -38.3, 137, -36.8, 137, -34, 134.2, -34, 128, -31, 128, 23, 126.1, 26, 123.9, 26, 115.8, 24.2, 114, -35.8, 114, -39, 110.8, -39, 107.8, -35, 105.8, -35, 104.6, -31.3, 96, 24.5, 96, 25, 95.8, 25, 94.9, 25.8, 86.8, 23.9, 84, -25.8, 84, -29, 80.8, -29, 77.8, -25, 75.8, -25, 74.6, -21.3, 66, 24.5, 66, 25, 65.8, 25, 64.9, 25.8, 56.8, 23.9, 54, -33.8, 54, -38.8, 64, -44.2, 64, -46, 65.8, -46, 74, -41, 78, -41, 80.8, -44.2, 84, -54.3, 84, -60.7, 89.4, -63, 88.3, -63, 87.3, -74, 81.2, -74, 58.8, -64, 53.8, -64, 6.70001, -74, 1.20001, -74, -102, -71.5, -102, -64, -106.1, -64, -131.2, -54, -136.2, -54, -152, -51.4, -152, -45, -154.4, -45, -155.4, -41.3, -164, -35.5, -164, -35, -164.2, -35, -165.4, -31.3, -174, -25.5, -174, -25, -174.2, -25, -175.4, -21.3, -184, -15.8, -184, -14, -185.8, -14, -193.8, -24, -198.8, -24, -232, -21.4, -232, -15, -234.4, -15, -235.5, -12, -241.5, -12, -244, 32, -244 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="pick_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
__meta__ = {
"_editor_description_": "som da agua"
}

[connection signal="body_entered" from="Pegou" to="." method="_on_Pegou_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
